# WallpaperApp

./: .WallpaperAppTemplate.autosave.xopp  .directory  .gitignore  Pipfile  README.md  WallpaperAppTemplate.xopp  docker-compose.yml  pyproject.toml
Backend/: manage.py
Backend/authentication/: views.py
Backend/main/: models.py  views.py
Backend/main/migrations/: 0003_userimstat_remove_images_owner_ids_and_more.py
WallpaperApp/WallpaperApp/: asgi.py  settings.py  urls.py
WallpaperApp/authentication/: serializers.py  urls.py  views.py
WallpaperApp/main/: models.py  serializers.py  urls.py  views.py
WallpaperApp/main/migrations/: 0001_initial.py  0002_alter_images_user_id_alter_improperties_image_uuid_and_more.py  0002_imtags_remove_images_user_id_images_owner_ids_and_more.py  0003_users_remove_images_user_id_images_user_uuid.py  0004_remove_images_user_uuid_images_user_id_delete_users.py  0004_rename_image_userimstat_image_uuid_and_more.py  0005_images_upload_date.py
backend/authentication/: models.py
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/album/: album.jsx  layoutSelect.js
frontend/src/header/: header.jsx  themeSlice.js  (+2 more)
wallpaperapp/backend/: Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
wallpaperapp/backend/authentication/: pyproject.toml  start.sh  start_worker.sh  views.py
wallpaperapp/backend/authentication/app/: models.py  serializers.py  tasks.py  urls.py  views.py
wallpaperapp/backend/authentication/core/: celery.py  settings.py  urls.py
wallpaperapp/backend/authentication/migrations/: 0001_initial.py  0002_remove_users_last_login_users_created.py  0003_remove_users_created.py
wallpaperapp/backend/wallpapers/: Dockerfile  pyproject.toml  start.sh
wallpaperapp/backend/wallpapers/app/: models.py  serializers.py  views.py
wallpaperapp/backend/wallpapers/core/: backends.py  celery.py  settings.py  storage.py  urls.py
wallpaperapp/frontend/: Dockerfile  package.json
(+74 files in other folders)
