[tool.poetry]
name = "wallpapers"
version = "0.1.0"
description = ""
authors = ["skorodenko <72010957+skorodenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
django = "^4.2.4"
djangorestframework = "^3.14.0"
celery = "^5.3.1"
psycopg2-binary = "^2.9.7"
django-cors-headers = "^4.2.0"
pillow = "^10.0.0"
django-imagekit = "^4.1.0"
minio = "^7.1.15"
drf-nested-forms = "^1.1.7"
djangorestframework-simplejwt = "^5.2.2"
boto3 = "^1.28.28"
django-storages = "^1.13.2"
redis = "^5.0.0"
django-celery-results = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
